labs/istio/apps/hello/istioroute.yaml

#----------------------------------#
# istio service mesh resources
# - destination rule (routing target)
# - virtual service (traffic control)
#----------------------------------#

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend
  namespace: hello
spec:
  host: backend
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
  namespace: hello
spec:
  hosts:
  - "backend.hello.local"
  http:
  - route:
    - destination:
        host: backend
        subset: v1
      weight: 80
    - destination:
        host: backend
        subset: v2
      weight: 20
---
